make tags responsive and resolve non mobile friendly html

--- a/src/app/menu-page/menu-page.component.scss
+++ b/src/app/menu-page/menu-page.component.scss
@@ -3,6 +3,10 @@
   margin-top: 30px;
 }
 
+.allSectionsWrapper {
+  overflow: hidden;
+}
+
 .containerz {
   width: 100%;
   padding-right: 15px;
@@ -32,12 +36,6 @@
 .section {
   padding: 0 22px 22px;
   border-top: 38px solid #fff;
-}
-
-.kouzinaSection {
-}
-
-.kavaSection {
 }
 
 .sectionTitle {
@@ -124,7 +122,6 @@
 }
 
 .new {
-  margin-left: 6px;
   background: #49200d;
   font-size: 8px;
   font-weight: 600;
@@ -134,8 +131,8 @@
   padding: 2px 6px;
   text-transform: uppercase;
   display: inline-block;
-  margin: 6px;
   max-height: 18px;
+  margin: 0;
 }
 
 .premium {
@@ -148,7 +145,7 @@
   padding: 2px 6px;
   text-transform: uppercase;
   display: inline-block;
-  margin: 6px 6px 6px -4px;
+  margin: 0 0 0 4px;
   max-height: 18px;
 }
 
@@ -312,6 +309,12 @@ p {
   max-width: 438px;
 }
 
+@media (max-width: 1200px) {
+  .item-spacer {
+    padding-top: 10px;
+  }
+}
+
 @media (min-width: 768px) {
   .menu-wrapper {
     display: -webkit-box;
@@ -341,13 +344,22 @@ p {
   }
 }
 
+.item-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: start;
+}
+
 .item-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: start;
 }
 
 .item-row-center {
